# acp-governance-sdks

./: .gitignore  LICENSE  PUBLISH.md  README.md  package-lock.json  package.json  tsconfig.base.json
examples/: anthropic-pr-reviewer.ts  three-axis-test.ts
examples/framework-scout/: FINDINGS.md  README.md
examples/framework-scout/claude-agent-sdk/: README.md  package.json  scout.ts
examples/framework-scout/claude-code/: README.md  com.acp.framework-scout.plist.example  post-draft.md  run.sh  scout.prompt.md
examples/framework-scout/claude-code/.claude/: settings.json
examples/framework-scout/codex-cli/: README.md  run.sh  scout.prompt.md
examples/framework-scout/openai-agents-sdk/: README.md  pyproject.toml  run.sh  scout.py
examples/starters/: README.md
examples/starters/autogen/: .env.example  README.md  pyproject.toml  starter.py
examples/starters/claude-agent-sdk/: .env.example  README.md  package.json  run.sh  starter.ts
examples/starters/claude-code/: .env.example  README.md  run.sh  starter.prompt.md
examples/starters/claude-desktop/: README.md
examples/starters/cline/: README.md
examples/starters/codex-cli/: .env.example  README.md  run.sh  starter.prompt.md
examples/starters/crewai/: .env.example  README.md  pyproject.toml  run.sh  starter.py
examples/starters/cursor/: README.md
examples/starters/google-adk/: .env.example  README.md  pyproject.toml  starter.py
examples/starters/langgraph/: .env.example  README.md  pyproject.toml  starter.py
examples/starters/mastra/: .env.example  README.md  package.json  starter.ts
examples/starters/openai-agents-sdk/: .env.example  README.md  pyproject.toml  starter.py
examples/starters/pydantic-ai/: .env.example  README.md  pyproject.toml  starter.py
examples/starters/vercel-ai-sdk/: .env.example  README.md  package.json  run.sh  starter.ts
examples/starters/zed/: README.md
python/acp-crewai/: README.md  pyproject.toml
python/acp-crewai/src/acp_crewai/: __init__.py  _crew_hooks.py
python/acp-governance/: README.md  pyproject.toml
python/acp-governance/src/acp_governance/: __init__.py  _config.py  _context.py  _governed.py  _hook.py
python/acp-langchain/: README.md  pyproject.toml
python/acp-langchain/src/acp_langchain/: __init__.py
