[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-governance"
version = "0.1.0"
description = "Thin Python SDK for the Agentic Control Plane governance hook protocol. Wrap any tool call; ACP decides allow/deny/redact."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "David Crowe" }]
keywords = ["agentic-control-plane", "acp", "agent-governance", "tool-audit", "ai-safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "requests>=2.25.0",
]

[project.urls]
Homepage = "https://agenticcontrolplane.com"
Documentation = "https://agenticcontrolplane.com/docs"
Source = "https://github.com/davidcrowe/acp-governance-sdks"
Issues = "https://github.com/davidcrowe/acp-governance-sdks/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_governance"]
