[project]
name = "acp-starter-crewai"
version = "0.0.1"
description = "Minimal ACP-governed agent starter using CrewAI."
requires-python = ">=3.10,<3.14"
dependencies = [
    "acp-crewai",
    "crewai>=1.14.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
acp-crewai = { path = "../../../python/acp-crewai", editable = true }
