[project]
name = "acp-starter-openai-agents-sdk"
version = "0.0.1"
description = "Minimal ACP-governed agent starter using the OpenAI Agents SDK."
requires-python = ">=3.10"
dependencies = [
    "acp-governance",
    "openai-agents>=0.14.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
acp-governance = { path = "../../../python/acp-governance", editable = true }
